examples/traefik-v3/kubernetes/advanced-separate-pod/traefik-forward-auth/ingress.yaml
#
# Auth Ingress
#
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`auth.example.com`)
    kind: Rule
    services:
    - name: traefik-forward-auth
      port: 4181
  tls:
    certresolver: default
